# dezero

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
dezero/: __init__.py  config.py  core.py  core_simple.py  function.py  functions.py  utils.py  variable.py
tests/: __init__.py  test_core.py  test_core_simple.py  test_dezero.py  test_functions.py
