[tool.poetry]
name = "dezero"
version = "0.1.0"
description = ""
authors = ["りーべ <magical.liebe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "^1.22.4"
nptyping = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
